--- a/src/app/wizard/dependencies-page/dependencies-page.component.html
+++ b/src/app/wizard/dependencies-page/dependencies-page.component.html
@@ -18,7 +18,7 @@
       <br>
     </div>
     <div *ngIf="licenceError">
-      <p><small>We had the following error: {{licenceErrorMessage}}.<br>Please clean the .LookAuth{{liteClient ? 'Lite' : ''}} folder and try reinstalling the application.</small></p>
+      <p><small>We had the following error: {{licenceErrorMessage}}.<br>Please clean the .leapp folder and try reinstalling the application.</small></p>
 
       <a href="mailto:support@noovolari.com" class="dark-link"><i>Need help? Contact us!</i></a>
       <br>
