--- a/src/app/wizard/setup-welcome/setup-welcome.component.html
+++ b/src/app/wizard/setup-welcome/setup-welcome.component.html
@@ -3,8 +3,8 @@
   <div class="container-fluid text-center">
     <h1 style="margin-bottom: 70px;">Add your Single Sign-On Url</h1>
     <p style="margin-bottom: 70px;">
-      This is the first time you’re configuring LookAuth Lite.
-      This url allows LookAuth to login to your Service Provider, you can retrieve it from your SAML application.
+      This is the first time you’re configuring Leapp Lite.
+      This url allows Leapp to login to your Service Provider, you can retrieve it from your SAML application.
     </p>
     <button (click)="gotToFirstIdpUrl();" class="btn btn-default btn-gradient">Next</button>
   </div>
