--- a/src/app/wizard/welcome-first-account/welcome-first-account.component.html
+++ b/src/app/wizard/welcome-first-account/welcome-first-account.component.html
@@ -3,7 +3,7 @@
   <div class="container-fluid text-center">
     <h1 style="margin-bottom: 70px;">Setup your first Account</h1>
     <p style="margin-bottom: 70px;">
-      This is the first time you’re configuring LookAuth Lite.
+      This is the first time you’re configuring Leapp.
       This procedure will guide you on creating your first account.
     </p>
     <button (click)="gotToFirstAccount();" class="btn btn-default btn-gradient">Next</button>
