Corrected some label in the application

--- a/src/app/session/account/account.component.html
+++ b/src/app/session/account/account.component.html
@@ -4,7 +4,7 @@
   <app-breadcrumbs [account]="account.accountName"></app-breadcrumbs>
 
   <h3>Truster Account List</h3>
-  <small>Accounts Trusted from <b>{{account.accountName}}</b> federated account.</small>
+  <small>Accounts Trusted from <b>{{account.accountName}}</b> Federated Account.</small>
 
   <ul class="cards">
 
