--- a/src/app/session/create-federated-account/create-federated-account.component.html
+++ b/src/app/session/create-federated-account/create-federated-account.component.html
@@ -11,7 +11,7 @@
         <div class="form-group" style="width: 100%; display: inline-block;">
           <label>Idp Arn<span class="danger-text">*</span></label>
           <input formControlName="idpArn" type="text" class="form-control" placeholder="Idp Arn *" (blur)="setAccountNumber($event);">
-          <small class="text-error" *ngIf="(form.controls['idpArn'].dirty || form.controls['idpArn'].touched) && form.controls['idpArn'].errors">Insert the Idp Arn</small>
+          <small class="text-error" *ngIf="(form.controls['idpArn'].dirty || form.controls['idpArn'].touched) && form.controls['idpArn'].errors">Insert the IdP ARN</small>
         </div>
 
         <div class="form-group" style="width: 100%; display: inline-block;">
