--- a/src/app/session/list-accounts/list-accounts.component.html
+++ b/src/app/session/list-accounts/list-accounts.component.html
@@ -32,7 +32,7 @@
 
         <hr>
 
-        <a (click)="listAccounts(account);" class="link">Manage truster accounts</a>
+        <a (click)="listAccounts(account);" class="link">Manage Truster Accounts</a>
       </div>
     </li>
 
