--- a/src/app/wizard/setup-first-account/setup-first-account.component.html
+++ b/src/app/wizard/setup-first-account/setup-first-account.component.html
@@ -7,9 +7,9 @@
       <div class="titable" title="Account Details" (click)="$event.stopPropagation(); toggleOpen = !toggleOpen;"></div>
       <div class="shrinkable">
         <div class="form-group" style="width: 100%; display: inline-block;">
-          <label>Idp Arn<span class="danger-text">*</span></label>
+          <label>IdP ARN<span class="danger-text">*</span></label>
           <input formControlName="idpArn" type="text" class="form-control" placeholder="Idp Arn *" (blur)="setAccountNumber($event);">
-          <small class="text-error" *ngIf="(form.controls['idpArn'].dirty || form.controls['idpArn'].touched) && form.controls['idpArn'].errors">Insert the Idp Arn</small>
+          <small class="text-error" *ngIf="(form.controls['idpArn'].dirty || form.controls['idpArn'].touched) && form.controls['idpArn'].errors">Insert the IdP ARN</small>
         </div>
 
         <div class="form-group" style="width: 100%; display: inline-block;">
