--- a/src/app/shared/profile-page/profile-page.component.html
+++ b/src/app/shared/profile-page/profile-page.component.html
@@ -3,29 +3,28 @@
 <div class="container-fluid">
   <app-profile-sidebar></app-profile-sidebar>
 
-  <h1>Update Your IdP URL</h1>
-  <form [formGroup]="form" class="form center-vertical text-left" (submit)="saveIdpUrl();">
+  <h1>Update Your IdP URLs</h1>
+  <form [formGroup]="form" class="form center-vertical text-left" (submit)="saveIdpUrls();">
 
     <div class="form-group" style="width: 70%; display: inline-block;">
-      <label>IdP URL<span class="danger-text">*</span></label>
+      <label>Google IdP URL<span class="danger-text">*</span></label>
       <input formControlName="idpUrl" type="text" class="form-control" placeholder="Idp Url *" [value]="idpUrlValue" >
-      <small class="text-error" *ngIf="(form.controls['idpUrl'].dirty || form.controls['idpUrl'].touched) && form.controls['idpUrl'].errors">Insert the IdP URL</small>
+      <small class="text-error" *ngIf="(form.controls['idpUrl'].dirty || form.controls['idpUrl'].touched) && form.controls['idpUrl'].errors">Insert the Google IdP URL</small>
+    </div>
+
+    <div class="form-group" style="width: 70%; display: inline-block;">
+      <label>Azure IdP URL<span class="danger-text">*</span></label>
+      <input formControlName="idpUrl" type="text" class="form-control" placeholder="Idp Url *" [value]="idpUrlValue" >
+      <small class="text-error" *ngIf="(form.controls['idpUrlAzure'].dirty || form.controls['idpUrlAzure'].touched) && form.controls['idpUrlAzure'].errors">Insert the Azure IdP URL</small>
     </div>
 
     <div class="form-group" style="width: 30%; display: inline-block; padding-top: 36px; padding-left: 20px;">
-      <button type="button" (click)="saveIdpUrl();" [disabled]="!form.valid" [ngClass]="(!form.valid) ? 'btn btn-default': 'btn btn-default btn-gradient'">Save</button>
+      <button type="button" (click)="saveIdpUrls();" [disabled]="!form.valid" [ngClass]="(!form.valid) ? 'btn btn-default': 'btn btn-default btn-gradient'">Save</button>
     </div>
 
-    <br><br>
-    <br><br>
-    <br><br>
+    <br><br><br><br><br><br>
 
-    <div class="form-group" style="width: 2%; display: inline-block;"></div>
-
-    <div class="form-group" style="width: 29%; display: inline-block;"></div>
-
-    <div class="form-group" style="width: 1%; display: inline-block;"></div>
-
+    <div class="form-group" style="width: 32%; display: inline-block;"></div>
     <div class="form-group" style="width: 26%; display: inline-block; padding-left: 14px;">
       <button type="button" (click)="goBack();" class="btn btn-secondary btn-outline-secondary">Back</button>
     </div>
