--- a/src/app/wizard/setup-first-account/setup-first-account.component.html
+++ b/src/app/wizard/setup-first-account/setup-first-account.component.html
@@ -26,44 +26,64 @@
       <div class="titable" title="Account Details" (click)="$event.stopPropagation(); toggleOpen = !toggleOpen;"></div>
       <div class="shrinkable">
 
-        <div class="form-group" style="width: 49%; display: inline-block;">
-          <label>Account Number<span class="danger-text">*</span></label>
-          <input formControlName="accountNumber" type="text" class="form-control" placeholder="Account Number *">
-          <small class="text-error" *ngIf="(form.controls['accountNumber'].dirty || form.controls['accountNumber'].touched) && form.controls['accountNumber'].errors">Insert the Account Number</small>
+        <div class="form-group" style="width: 100%; display: inline-block;">
+          <label>Choose your account type<span class="danger-text">*</span></label>
+          <br>
+          <button type="button" class="account-type {{accountType === 'AWS' ? 'selected' : ''}}" (click)="setAccountType('AWS');">AWS</button>
+          &nbsp;&nbsp;
+          <button type="button" class="account-type {{accountType === 'AZURE' ? 'selected' : ''}}" (click)="setAccountType('AZURE');">AZURE</button>
         </div>
 
-        <div style="width: 2%; height: 1px; display: inline-block;"></div>
 
-        <div class="form-group" style="width: 49%; display: inline-block;">
-          <label>Federated or truster?</label>
-          <ng-select formControlName="federatedOrTruster" bindLabel="type" bindValue="type" [items]="types" [(ngModel)]="selectedType" dropdownPosition="bottom" ></ng-select>
-        </div>
-
-        <div class="form-group" style="width: 100%; display: inline-block;" *ngIf="selectedType == 'federated'">
-          <label>IdP ARN<span class="danger-text">*</span></label>
-          <input formControlName="idpArn" type="text" class="form-control" placeholder="Idp Arn *" (blur)="setAccountNumber($event);">
-          <small class="text-error" *ngIf="(form.controls['idpArn'].dirty || form.controls['idpArn'].touched) && form.controls['idpArn'].errors">Insert the IdP ARN</small>
-        </div>
-
-        <div *ngIf="selectedType == 'truster'">
-
-          <div class="form-group" style="width: 49%; display: inline-block; position: relative; top: -1px;" >
-            <label style="margin-bottom: 0;">Federated Account<span class="danger-text">*</span> <i class="fa fa-question-circle" tooltip="This role is used to make AssumeRole on the Truster Account"></i></label>
-            <ng-select class="mt-2" formControlName="federatedAccount" bindLabel="accountName" bindValue="accountNumber" dropdownPosition="top" [items]="federatedAccounts" [(ngModel)]="selectedAccount" (change)="getFedRoles();"></ng-select>
+        <ng-container *ngIf="accountType === 'AWS'">
+          <div class="form-group" style="width: 49%; display: inline-block;">
+            <label>Account Number<span class="danger-text">*</span></label>
+            <input formControlName="accountNumber" type="text" class="form-control" placeholder="Account Number *">
+            <small class="text-error" *ngIf="(form.controls['accountNumber'].dirty || form.controls['accountNumber'].touched) && form.controls['accountNumber'].errors">Insert the Account Number</small>
           </div>
 
           <div style="width: 2%; height: 1px; display: inline-block;"></div>
 
-          <div class="form-group" style="width: 49%; display: inline-block; position: relative; top: -1px;">
-            <label style="margin-bottom: 0;">Federated Role<span class="danger-text">*</span> <i class="fa fa-question-circle" tooltip="This role is used to make AssumeRole on the Truster Account"></i></label>
-            <ng-select class="mt-2" formControlName="federatedRole" bindLabel="name" bindValue="name" dropdownPosition="top" [items]="federatedRoles" [(ngModel)]="selectedRole"></ng-select>
+          <div class="form-group" style="width: 49%; display: inline-block;">
+            <label>Federated or truster?</label>
+            <ng-select formControlName="federatedOrTruster" bindLabel="type" bindValue="type" [items]="[{type: 'federated'}, {type: 'truster'}]" [(ngModel)]="selectedType" dropdownPosition="bottom" ></ng-select>
           </div>
 
-        </div>
+          <div class="form-group" style="width: 100%; display: inline-block;" *ngIf="selectedType == 'federated'">
+            <label>IdP ARN<span class="danger-text">*</span></label>
+            <input formControlName="idpArn" type="text" class="form-control" placeholder="Idp Arn *" (blur)="setAccountNumber($event);">
+            <small class="text-error" *ngIf="(form.controls['idpArn'].dirty || form.controls['idpArn'].touched) && form.controls['idpArn'].errors">Insert the IdP ARN</small>
+          </div>
+
+          <div *ngIf="selectedType == 'truster'">
+
+            <div class="form-group" style="width: 49%; display: inline-block; position: relative; top: -1px;" >
+              <label style="margin-bottom: 0;">Federated Account<span class="danger-text">*</span> <i class="fa fa-question-circle" tooltip="This role is used to make AssumeRole on the Truster Account"></i></label>
+              <ng-select class="mt-2" formControlName="federatedAccount" bindLabel="accountName" bindValue="accountNumber" dropdownPosition="top" [items]="federatedAccounts" [(ngModel)]="selectedAccount" (change)="getFedRoles();" [disabled]="true"></ng-select>
+            </div>
+
+            <div style="width: 2%; height: 1px; display: inline-block;"></div>
+
+            <div class="form-group" style="width: 49%; display: inline-block; position: relative; top: -1px;">
+              <label style="margin-bottom: 0;">Federated Role<span class="danger-text">*</span> <i class="fa fa-question-circle" tooltip="This role is used to make AssumeRole on the Truster Account"></i></label>
+              <ng-select class="mt-2" formControlName="federatedRole" bindLabel="name" bindValue="name" dropdownPosition="top" [items]="federatedRoles" [(ngModel)]="selectedRole"></ng-select>
+            </div>
+
+          </div>
+        </ng-container>
+
+        <ng-container *ngIf="accountType === 'AZURE'">
+          <div class="form-group" style="width: 100%; display: inline-block;">
+            <label>Subscription Id<span class="danger-text">*</span></label>
+            <input formControlName="subscriptionId" type="text" class="form-control" placeholder="Subscription Id *">
+            <small class="text-error" *ngIf="(form.controls['subscriptionId'].dirty || form.controls['subscriptionId'].touched) && form.controls['subscriptionId'].errors">Insert the Subscription Id</small>
+          </div>
+        </ng-container>
 
       </div>
     </div>
 
+    <ng-container *ngIf="accountType === 'AWS'">
     <div class="toggable {{!toggleOpen ? 'opened' : 'closed'}}">
       <div class="titable" title="Role Details" (click)="$event.stopPropagation(); toggleOpen = !toggleOpen;"></div>
       <div class="shrinkable">
@@ -84,8 +104,9 @@
         </div>
       </div>
     </div>
+    </ng-container>
 
-    <button type="button" (click)="saveAccount();" [disabled]="!(form.valid && this.roles.length > 0)" [ngClass]="!(form.valid && this.roles.length > 0) ? 'btn btn-default pull-right': 'btn btn-default btn-gradient pull-right'">Save</button>
+    <button type="button" (click)="saveAccount();" [disabled]="!formValid()" [ngClass]="!formValid() ? 'btn btn-default pull-right': 'btn btn-default btn-gradient pull-right'">Save</button>
 
   </form>
 
