--- a/src/app/session/create-account/create-account.component.scss
+++ b/src/app/session/create-account/create-account.component.scss
@@ -160,3 +160,18 @@ li:last-child {
 .ng-dropdown-panel .ng-dropdown-panel-items {
   max-height: 188px;
 }
+
+.account-type {
+  border: 1px solid #222222;
+  outline: none;
+  background: #ffffff;
+  color: #222222;
+  border-radius: 4px;
+  transition: all 0.3s ease;
+}
+.account-type:hover {
+  background: #cfd2d3;
+}
+.account-type.selected {
+  background: #ff9e39;
+}
