--- a/src/app/session/session/session.component.html
+++ b/src/app/session/session/session.component.html
@@ -109,7 +109,7 @@
 
   </ul>
 
-  <a (click)="gotToAccountManagement();" tooltip="Go to Account Management" class="round-btn"><img src="assets/images/cogs-light.png" width="18"/></a>
+  <a (click)="createAccount();" tooltip="Create Account" class="round-btn"><img src="assets/images/plus-light.png" width="18"/></a>
 </div>
 
 <ng-template #addAccountToListTemplate>
