Added correct screens and logic and dynamic traybar

--- a/src/app/shared/profile/profile.component.html
+++ b/src/app/shared/profile/profile.component.html
@@ -2,11 +2,15 @@
 
   <div class="portrait" (click)="toggleProfile();">
     <div class="avatar">
-      <b *ngIf="!havePortrait" class="" style="font-size: 24px; margin: 12px 0; color: #ffffff; display: inline-block; width: 100%; text-align: center;">{{emailData.substr(0, 2).toUpperCase()}}</b>
-      <img src="data:image/png;base64,{{portrait}}" *ngIf="havePortrait" width="60" />
+      <b style="position: relative; top: -5px; left: 1px;"><img src="assets/images/lines.png" alt="" title="" width="16" /></b>
     </div>
-    <div class="ed {{emailData.indexOf('@') > -1 ? '' : 'red-ws'}}">{{emailData.indexOf('@') > -1 ? 'online' : 'offline'}}</div>
+
     <div class="ws">{{((emailData.length > 19) ? emailData.substr(0, 18) + '&hellip;' : emailData)}}</div>
+
+    <div class="onlines">
+      <span class="online-aws {{onlineAws ? 'online' : ''}}"></span>
+      <span class="online-azure {{onlineAzure ? 'online' : ''}}"></span>
+    </div>
   </div>
 
 </div>
