--- a/src/app/session/create-account/create-account.component.scss
+++ b/src/app/session/create-account/create-account.component.scss
@@ -106,6 +106,12 @@ label { font-size: 14px; }
   bottom: 25px;
 }
 
+.pull-left {
+  position: absolute;
+  left: 25px;
+  bottom: 25px;
+}
+
 ul {
   padding: 10px 0;
   margin: 0;
