--- a/src/app/session/edit-account/edit-account.component.scss
+++ b/src/app/session/edit-account/edit-account.component.scss
@@ -106,6 +106,12 @@ label { font-size: 14px; }
   bottom: 25px;
 }
 
+.pull-left {
+  position: absolute;
+  left: 25px;
+  bottom: 25px;
+}
+
 ul {
   padding: 10px 0;
   margin: 0;
@@ -159,4 +165,19 @@ li:last-child {
 
 .ng-dropdown-panel .ng-dropdown-panel-items {
   max-height: 188px;
+}
+
+.account-type {
+  border: 1px solid #222222;
+  outline: none;
+  background: #ffffff;
+  color: #222222;
+  border-radius: 4px;
+  transition: all 0.3s ease;
+}
+.account-type:hover {
+  background: #cfd2d3;
+}
+.account-type.selected {
+  background: #ff9e39;
 }
