--- a/src/app/session/session/session.component.scss
+++ b/src/app/session/session/session.component.scss
@@ -32,17 +32,16 @@ ul {
 }
 
 .session-card {
-  width: 80%;
-  margin: 10px auto;
+  width: 100%;
+  margin: 0;
+  padding: 10px;
+  background: #fcfcfc;
   text-align: left;
   position: relative;
   transition: all 0.4s ease;
-  color: white;
+  color: #222222;
 
   .button-area {
-    position: absolute;
-    top: 10px;
-    right: 10px;
 
     a {
       display: inline-block;
@@ -108,9 +107,6 @@ ul {
   }
 
   .button-area-2 {
-    position: absolute;
-    top: 92px;
-    right: 10px;
 
     a {
       display: inline-block;
@@ -129,16 +125,12 @@ ul {
     }
   }
 
-  span { font-size: 14px; }
+  span { font-size: 14px; color: #222222}
   h1 { font-size: 20px; }
   h3 { font-size: 12px; }
   h4 { font-size: 10px; }
-}
 
-.session-card > div {
-  padding: 8px;
-  border-radius: 4px;
-  box-shadow: 0 0 20px -14px rgba(0,0,0,0.49);
+  border-bottom: 1px solid #cfd2d3;
 }
 
 .selected-session-card {
@@ -258,16 +250,14 @@ h3 {
 
 .mycard {
   position: relative;
-  z-index: 1;
 }
 .ssm-card {
   border-radius: 4px;
   background: white;
-  box-shadow: 0 0 42px -14px rgba(0, 0, 0, 0.49);
   color: #707070;
   font-size: 12px;
   padding: 9px;
-  border: 1px solid #ddd;
+  border-bottom: 1px solid #acacac;
   height: 50px;
   margin: 5px 0;
 
@@ -277,30 +267,9 @@ h3 {
   }
 }
 
-.ssm-card > div:first-child {
-  float: left;
-  color: #707070;
-  text-align: left;
-}
-
-.list-of-ssm {
-  overflow-y: auto;
-  height: 35vh;
-}
-
-.ssm-ul {
-  height: 28vh
-}
-
-.ssm-tray-opened {
-  animation-name: moveDown;
-  animation-duration: 0.5s;
-  animation-fill-mode: forwards;
-}
-
 .ssm-cards {
-  overflow-y: hidden;
-  height: 420px;
+  height: 478px;
+  margin: 0!important;
 }
 
 .grayedout {
@@ -396,4 +365,86 @@ $purple: rgba(190,  11, 224, .55);
 
 .account-to-remove tr:hover td, .clicked {
   background: rgba(255, 248, 186, 0.34);
+}
+
+.btn-group {
+  display: inline-block;
+  border-radius: 4px;
+  border: 1px solid #777777;
+  box-shadow: #777777;
+  color: #222222;
+  padding: 0 5px;
+  cursor: pointer;
+}
+.btn-group:hover {
+  text-decoration: none;
+}
+.btn-group.active {
+  background: #ff9e39;
+  color: #222222;
+}
+.btn-center {
+  border-radius: 0;
+  border-left: none;
+  border-right: none;
+}
+.btn-left {
+  border-right: none;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.btn-right {
+  border-left: none;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.small-btn {
+  border-radius: 4px;
+  border: 1px solid #222222;
+  padding: 0 5px;
+  float: right;
+}
+
+.dot {
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  border-radius: 8px;
+  background: #777777;
+}
+.dot.green {
+  background: #8fc92a;
+}
+
+.search-bar {
+
+  display: inline-block;
+  width: 185px;
+  border-radius: 10px;
+  border: 1px solid #222222;
+  height: 27px;
+  margin-right: 23px;
+  overflow: hidden;
+  float: right;
+  padding: 0 10px 0 10px;
+
+  input {
+    border: none;
+    outline: none;
+    height: 14px;
+    display: inline-block;
+    width: 100%;
+    position: relative;
+    top: -5px;
+  }
+}
+
+.menu-bar {
+  clear: both;
+}
+
+.information {
+  display: inline-block;
+  width: 286px;
 }
