--- a/src/app/shared/profile-page/profile-page.component.html
+++ b/src/app/shared/profile-page/profile-page.component.html
@@ -14,8 +14,13 @@
 
     <div class="form-group" style="width: 70%; display: inline-block;">
       <label>Azure IdP URL<span class="danger-text">*</span></label>
-      <input formControlName="idpUrl" type="text" class="form-control" placeholder="Idp Url *" [value]="idpUrlValue" >
+      <input formControlName="idpUrlAzure" type="text" class="form-control" placeholder="Idp Url *" [value]="idpUrlValue" >
       <small class="text-error" *ngIf="(form.controls['idpUrlAzure'].dirty || form.controls['idpUrlAzure'].touched) && form.controls['idpUrlAzure'].errors">Insert the Azure IdP URL</small>
+    </div>
+
+    <div class="form-group" style="width: 70%; display: inline-block;">
+      <label>Proxy URL</label>
+      <input formControlName="proxyUrl" type="text" class="form-control" placeholder="Proxy Url" [value]="proxyUrl" >
     </div>
 
     <div class="form-group" style="width: 30%; display: inline-block; padding-top: 36px; padding-left: 20px;">
