--- a/src/app/shared/profile/profile.component.scss
+++ b/src/app/shared/profile/profile.component.scss
@@ -1,7 +1,7 @@
 .profile {
   clear: both;
   padding: 20px 25px;
-  height: 80px;
+  height: 40px;
   width: 25%;
   margin-top: 15px;
   margin-bottom: 15px;
@@ -11,11 +11,12 @@
 }
 
 .avatar {
-  border-radius: 60px;
-  width: 60px;
-  height: 60px;
+  border-radius: 4px;
+  width: 20px;
+  height: 20px;
   display: inline-block;
-  background:linear-gradient(-90deg, rgb(249, 212, 35) 0%, rgb(230, 92, 0) 80%)!important;
+  background: white;
+  border: 1px solid rgba(0,0,0,0.49);
   position: relative;
   overflow: hidden;
   transition: opacity 0.5s ease;
@@ -49,8 +50,8 @@
   font-weight: bold;
   display: block;
   position: absolute;
-  left: 80px;
-  top: 14px;
+  left: 40px;
+  top: 0;
   width: 56vw;
   cursor: pointer;
 }
