Added Azure authentication method

--- a/src/app/wizard/start-screen/start-screen.component.html
+++ b/src/app/wizard/start-screen/start-screen.component.html
@@ -4,7 +4,7 @@
     <br>
     <p>Setup your first account</p>
     <br>
-    <button (click)="resolveDependenciesMvp();" class="btn btn-default btn-gradient">Create your first account</button>
+    <button (click)="resolveDependencies();" class="btn btn-default btn-gradient">Create your first account</button>
     <br>
     <a href="mailto:support@noovolari.com" class="dark-link"><i>Need help? Contact us!</i></a>
 </div>
