moved start-screen in start module to divide logical feats

--- a/src/app/start/start-screen/start-screen.component.html
+++ b/src/app/start/start-screen/start-screen.component.html
@@ -1,6 +1,6 @@
 <div class="content flex-container column page-container" *ngIf="!loading">
 
-    <img src="assets/images/Leapp.png" width="200"/>
+    <img src="/assets/images/Leapp.png" width="200"/>
     <br>
     <p>Setup your first account</p>
     <br>
@@ -12,7 +12,7 @@
 <div class="content flex-container column page-container" *ngIf="loading">
 
   <div class="app-loading">
-    <img src="assets/images/be-auth-logo.svg" width="100" />
+    <img src="/assets/images/be-auth-logo.svg" width="100" />
     <svg class="spinner" viewBox="25 25 50 50">
       <defs>
         <linearGradient id="linearColors1">
