fixed profile component and added _palette.scss

--- a/src/app/layout/session-layout/session-layout.component.html
+++ b/src/app/layout/session-layout/session-layout.component.html
@@ -1,2 +1,2 @@
-<app-profile [workspaceName]="name" [emailData]="email"></app-profile>
+<app-profile></app-profile>
 <router-outlet></router-outlet>
