--- a/src/app/shared/profile-page/profile-page.component.html
+++ b/src/app/shared/profile-page/profile-page.component.html
@@ -1,4 +1,4 @@
-<app-profile [workspaceName]="name" [emailData]="email"></app-profile>
+<app-profile></app-profile>
 
 <div class="container-fluid">
   <app-profile-sidebar></app-profile-sidebar>
