--- a/_palette.scss
+++ b/_palette.scss
@@ -1,6 +1,4 @@
-$charcoal-grey: #343e48;
 $dark-sky-blue: #4a90e2;
-$sick-green: #8fc92a;
 $silver: #cfd2d3;
 $silver-two: #dfe1e2;
 $silver-75: rgba(207, 210, 211, 0.75);
@@ -17,12 +15,15 @@ $primary-text-color: #fafafa;
 $secondary-text-color: #eceff1;
 $success-color: rgba(87, 181, 92, 0.8);
 $warning-color: #b5a262;
+$copper: #d64123;
+$success: #8fc92a;
+$charcoal-grey: #343e48;
 $danger-color: #b53234;
-$info-color: #4a90e2;
-$primary-background: $charcoal-grey;
-$third-background: #1a0933;
-$secondary-background: #134580;
-$success-background: rgb(168, 240, 173);
-$warning-background: #fff8ba;
-$danger-background: rgb(219, 161, 136);
-$info-background: rgb(132, 224, 252);
+
+
+/* Leapp color palette */
+$main-color: #080B38;
+$main-color-light: #73E0CF;
+$text-color: #616161;
+$white-text-color: #ffffff;
+$focused-background: rgba($main-color-light,0.13);
