--- a/src/app/shared/profile/profile.component.html
+++ b/src/app/shared/profile/profile.component.html
@@ -1,16 +1,11 @@
 <div class="profile">
-
   <div class="portrait" (click)="toggleProfile();">
-    <div class="avatar">
-      <b style="position: relative; top: -5px; left: 1px;"><img src="assets/images/lines.png" alt="" title="" width="16" /></b>
-    </div>
-
-    <div class="ws">{{((emailData.length > 19) ? emailData.substr(0, 18) + '&hellip;' : emailData)}}</div>
-
-    <div class="onlines">
-      <span class="online-aws {{onlineAws ? 'online' : ''}}"></span>
-      <span class="online-azure {{onlineAzure ? 'online' : ''}}"></span>
-    </div>
+      <img src="assets/images/lines.png" alt="" title="" width="16" />
   </div>
+</div>
+
+<div class="centered-div">
+    <img src="assets/images/Leapp_Logo_Blu.png"  alt="" title="" width="110px">
 
 </div>
+
