--- a/src/assets/scss/toast.scss
+++ b/src/assets/scss/toast.scss
@@ -13,7 +13,7 @@
 .toast-info { color: #64BFFC !important; background: #E6F5FF!important; border: 1px solid #64BFFC; }
 .toast-success { color: rgba(30,86,31,0.8)!important; background: #FCFFF5!important; border: 1px solid #a8c599; }
 .toast-error { color: #973937 !important; background: #fff6f6 !important; border: 1px solid #973937; }
-.toast-warning { color: $warning-color !important; background: $warning-background !important; border: 1px solid #FFE200; }
+.toast-warning { color: #B5A262 !important; background: #FFF8BA !important; border: 1px solid #FFE200; }
 
 .toast-container { z-index: 99; }
 .toast-title { font-weight: bold; }
