--- a/src/app/session/session/session.component.html
+++ b/src/app/session/session/session.component.html
@@ -3,9 +3,20 @@
   <app-profile-sidebar></app-profile-sidebar>
 
   <div class="menu-bar">
-    <a class="btn-group {{showOnly === 'AWS' ? 'active' : ''}} btn-left" (click)="setVisibility('AWS');">AWS</a>
-    <a class="btn-group {{showOnly === 'AZR' ? 'active' : ''}} btn-center" (click)="setVisibility('AZR');">AZR</a>
-    <a class="btn-group {{showOnly === 'ALL' ? 'active' : ''}} btn-right" (click)="setVisibility('ALL');">ALL</a>
+    <div class="provider-selector">
+      <div class="btn-left {{showOnly === 'AWS' ? 'active' : ''}}  ">
+        <a (click)="setVisibility('AWS');">
+          <img src="assets/images/aws-logo.svg">
+        </a>
+      </div>
+      <div class="btn-right {{showOnly === 'AZR' ? 'active' : ''}} ">
+        <a (click)="setVisibility('AZR');">
+          <img src="assets/images/azure-logo.svg">
+        </a>
+      </div>
+
+    </div>
+
 
     <a (click)="createAccount();" tooltip="Create Account" class="small-btn"><img src="assets/images/plus-light.png" width="14"/></a>
 
