added palette e toggle filter

--- a/src/app/layout/session-layout/session-layout.component.scss
+++ b/src/app/layout/session-layout/session-layout.component.scss
@@ -1,3 +1,4 @@
+@import "palette";
 .tip {
   position: absolute;
   bottom: 7px;
@@ -5,3 +6,5 @@
   color: #707070;
   font-size: 10px;
 }
+
+.background { background: $background}
