--- a/src/app/layout/session-layout/session-layout.component.html
+++ b/src/app/layout/session-layout/session-layout.component.html
@@ -1,2 +1,5 @@
-<app-profile></app-profile>
-<router-outlet></router-outlet>
+<div class="background">
+  <app-profile></app-profile>
+  <router-outlet></router-outlet>
+</div>
+
