--- a/src/app/session/session/session.component.scss
+++ b/src/app/session/session/session.component.scss
@@ -1,13 +1,52 @@
-.timer {
-  font-size: 35px;
-  font-weight: bold;
-  color: #707070;
+@import "palette";
+
+.provider-selector {
+  position: relative;
+  display: inline-block;
+
 }
+
+.provider-selector {
+  span {
+    width: 1px;
+    background: $main-color-light;
+  }
+
+  .btn-left, .btn-right  {
+    display: inline-block;
+    padding: 7px;
+    cursor: pointer;
+    background: $light-color;
+  }
+
+
+  .btn-left {
+    border-radius: $border-radius 0 0 $border-radius;
+    padding: 7px 0 7px 7px!important;
+    a {
+      border-right: 2px solid $main-color-light;
+      padding-right: 7px;
+    }
+  }
+
+  .btn-right {border-radius: 0 $border-radius $border-radius 0}
+
+  .btn-left:hover, .btn-right:hover {
+    text-decoration: none;
+    background: $focused-element;
+  }
+  .btn-left.active, .btn-right.active  {
+    background: $focused-element;
+    border: 1px solid $main-color-light;
+    a {border: none}
+  }
+}
+
 
 .fake-input {
   margin-top: 5px;
   padding: 10px;
-  border-radius: 4px;
+  border-radius: $border-radius;
   height: 40px;
   display: block;
   border: 1px solid #dededf;
@@ -369,37 +408,6 @@ $purple: rgba(190,  11, 224, .55);
   background: rgba(255, 248, 186, 0.34);
 }
 
-.btn-group {
-  display: inline-block;
-  border-radius: 4px;
-  border: 1px solid #777777;
-  box-shadow: #777777;
-  color: #222222;
-  padding: 0 5px;
-  cursor: pointer;
-}
-.btn-group:hover {
-  text-decoration: none;
-}
-.btn-group.active {
-  background: #ff9e39;
-  color: #222222;
-}
-.btn-center {
-  border-radius: 0;
-  border-left: none;
-  border-right: none;
-}
-.btn-left {
-  border-right: none;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-}
-.btn-right {
-  border-left: none;
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
-}
 
 .small-btn {
   border-radius: 4px;
