--- a/_palette.scss
+++ b/_palette.scss
@@ -26,4 +26,7 @@ $main-color: #080B38;
 $main-color-light: #73E0CF;
 $text-color: #616161;
 $white-text-color: #ffffff;
-$focused-background: rgba($main-color-light,0.13);
+$focused-element: rgba($main-color-light,0.13);
+$background: #F8F8F8;
+$light-color: white;
+$border-radius: 5px;
